# adk-teams

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
adk_teams/: __init__.py  persona.py
adk_teams/tools/: __init__.py  file_read.py  web_search.py
adk_teams/tools/collaboration/: irc_platform.py  platform.py
agents/example_fleet/developer/: base.yaml
agents/example_fleet/junior_dev/: agent.py  config.yaml
agents/example_fleet/security/: agent.py  config.yaml
agents/example_fleet/senior_dev/: agent.py  config.yaml
agents/example_fleet/senior_dev/.adk/: session.db
agents/tools/: collab_post.py  collab_read.py  file_read.py
agents/tools/collaboration/: __init__.py  discord_platform.py  factory.py  file_platform.py
docs/: getting-started.md  persona-design.md  tool-patterns.md
examples/01_hello/: README.md
examples/01_hello/agents/greeter/: agent-card.json  agent.py  config.yaml
examples/02_a2a_greeting/: README.md  greeter-input.json  planner-input.json  run.sh
examples/02_a2a_greeting/agents/greeter/: agent-card.json  agent.py  config.yaml
examples/02_a2a_greeting/agents/planner/: agent-card.json  agent.py  config.yaml
examples/03_dev_team/: README.md
examples/03_dev_team/agents/developer/: base.yaml
tests/: conftest.py  test_collab_post.py  test_collab_read.py  test_e2e.py  test_file_read.py  test_web_search.py
tests/test_e2e/: test_a2a_greeting.py  test_dev_team.py  test_hello.py
tests/test_tools/: test_collab_post.py  test_collab_read.py  test_file_read.py  test_web_search.py
(+9 files in other folders)
